<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/universalFragment">

    <!-- Evrensel İndirici (Ana ekran) -->
    <fragment
        android:id="@+id/universalFragment"
        android:name="com.basitce.videodownloader.ui.universal.UniversalFragment"
        android:label="@string/nav_universal"
        tools:layout="@layout/fragment_universal" />

    <!-- Platform Seçimi -->
    <fragment
        android:id="@+id/platformFragment"
        android:name="com.basitce.videodownloader.ui.platform.PlatformFragment"
        android:label="@string/nav_platforms"
        tools:layout="@layout/fragment_platform" />

    <!-- İndirmeler -->
    <fragment
        android:id="@+id/downloadsFragment"
        android:name="com.basitce.videodownloader.ui.downloads.DownloadsFragment"
        android:label="@string/nav_downloads"
        tools:layout="@layout/fragment_downloads" />

    <!-- Ayarlar -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.basitce.videodownloader.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
